Add UploadHearingDocumentType and update CaseData to include new document properties